--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -4,36 +4,15 @@
 @import '../vendor/jquery.mb-comingsoon/jquery.mb-comingsoon';
 
 @import 'main';
-@import 'blocks/bg';
-@import 'blocks/icon';
-@import 'blocks/logo';
-@import 'blocks/btn';
-@import 'blocks/form';
-@import 'blocks/blocks';
-@import 'blocks/pagination';
-@import 'blocks/menuHorizontal';
-@import 'blocks/dropdownMenu';
-@import 'blocks/menuFooter';
-@import 'blocks/menuVertical';
-@import 'blocks/breadcrumb';
-@import 'blocks/basketSmall';
-@import 'blocks/basket';
-@import 'blocks/coupon';
-@import 'blocks/headerSmall';
-@import 'blocks/mobileSidebar';
-@import 'blocks/slider';
-@import 'blocks/carousel';
-@import 'blocks/gallery';
-@import 'blocks/banner';
-@import 'blocks/actionBlockSmall';
-@import 'blocks/price';
-@import 'blocks/goods';
-@import 'blocks/sortBlock';
-@import 'blocks/rangeBlock';
-@import 'blocks/chips';
-@import 'blocks/filterBlock';
-@import 'blocks/blockGraphics';
-@import 'blocks/blockNews';
-@import 'blocks/rating';
-@import 'blocks/tabs';
-@import 'blocks/preloaders';
+@import 'block/container';
+@import 'block/header';
+@import 'block/footer';
+@import 'block/logo';
+@import 'block/banner';
+@import 'block/services-main';
+@import 'block/service-block';
+@import 'block/text-block';
+@import 'block/info-block';
+@import 'block/slidet-vertical';
+@import 'block/article';
+@import 'block/soc';
