--- a/dev/sass/block/services-main.scss
+++ b/dev/sass/block/services-main.scss
@@ -2,6 +2,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: -72px;
+  margin-bottom: 104px;
 
   &__preview-item {
     width: 310px;
