--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import 'main';
 @import 'block/container';
+@import 'block/main-menu';
 @import 'block/header';
 @import 'block/footer';
 @import 'block/logo';
