--- a/dev/sass/block/container.scss
+++ b/dev/sass/block/container.scss
@@ -1,9 +1,22 @@
 .container {
-  width: 1114px;
+  width: 100%;
+  max-width: 1114px;
   margin-left: auto;
   margin-right: auto;
 
-  @media (max-width: 1200px) {
-    width: calc(100% - 100px);
+  @media (max-width: 1359px) {
+    max-width: 960px;
+  }
+
+  @media (max-width: 1109px) {
+    max-width: 720px;
+  }
+
+  @media (max-width: 767px) {
+    max-width: 540px;
+  }
+
+  @media (max-width: 575px) {
+    max-width: calc(100% - 30px);
   }
 }
