--- a/dev/sass/block/footer.scss
+++ b/dev/sass/block/footer.scss
@@ -5,4 +5,20 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  &__copyright {
+
+    @media (max-width: 1109px) {
+      order: 1;
+      width: 50%;
+      text-align: right;
+    }
+  }
+
+  &__soc {
+
+    @media (max-width: 1109px) {
+      width: 50%;
+    }
+  }
 }
