--- a/dev/sass/block/service-block.scss
+++ b/dev/sass/block/service-block.scss
@@ -15,11 +15,32 @@
     display: flex;
     align-items: flex-end;
     margin-bottom: 15px;
+
+    @media (max-width: 1359px) {
+      margin-bottom: 10px;
+      height: 46px;
+    }
   }
 
   &__name {
     font-weight: 600;
     font-size: 17px;
     line-height: 17px;
+    margin-bottom: 0;
+
+    @media (max-width: 1359px) {
+      font-size: 15px;
+      line-height: 15px;
+    }
+  }
+
+  @media (max-width: 1359px) {
+    width: 200px;
+    height: 185px;
+    padding: 15px;
+  }
+
+  @media (max-width: 1109px) {
+    margin-right: 15px;
   }
 }
