--- a/dev/sass/block/slidet-vertical.scss
+++ b/dev/sass/block/slidet-vertical.scss
@@ -46,5 +46,19 @@
     &:focus {
       border: none;
     }
+
+    @media (max-width: 1109px) {
+      width: 45px;
+      height: 45px;
+      right: -23px;
+    }
+
+    @media (max-width: 767px) {
+      right: -10px;
+    }
+  }
+
+  @media (max-width: 449px) {
+    height: 300px;
   }
 }
