--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -50,6 +50,9 @@ img {
   &-2 {
     margin-bottom: 15px;
   }
+  &-4 {
+    margin-bottom: 30px;
+  }
 }
 
 .color-gray {
@@ -93,6 +96,23 @@ img {
   &-12 {
     width: 100%;
   }
+
+  @media (max-width: 1109px) {
+    &-1,
+    &-2,
+    &-3,
+    &-4,
+    &-5,
+    &-6,
+    &-7,
+    &-8,
+    &-9,
+    &-10,
+    &-11,
+    &-12 {
+      width: 100%;
+    }
+  }
 }
 
 h1, .h1 {
@@ -100,6 +120,11 @@ h1, .h1 {
   font-size: 50px;
   line-height: 47px;
   margin-bottom: 15px;
+
+  @media (max-width: 575px) {
+    font-size: 34px;
+    line-height: 34px;
+  }
 }
 
 h2, .h2 {
@@ -107,11 +132,21 @@ h2, .h2 {
   font-size: 35px;
   line-height: 33px;
   margin-bottom: 15px;
+
+  @media (max-width: 575px) {
+    font-size: 26px;
+    line-height: 26px;
+  }
 }
 
 .sub-title {
   font-size: 20px;
   line-height: 22px;
+
+  @media (max-width: 575px) {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
 
 .flex-row {
