--- a/dev/sass/block/form.scss
+++ b/dev/sass/block/form.scss
@@ -6,6 +6,14 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: 575px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__item {
@@ -14,6 +22,10 @@
 
     &--50 {
       width: calc(50% - 12px);
+
+      @media (max-width: 575px) {
+        width: 100%;
+      }
     }
   }
 
@@ -24,18 +36,20 @@
     border-bottom: 1px solid rgba(115, 115, 132, 0.5);
     color: #737384;
     outline: none;
+    background: transparent;
   }
 
   &__textarea {
     width: 100%;
     min-height: 27px;
-    height: 93px;
+    height: 71px;
     border: none;
     border-bottom: 1px solid rgba(115, 115, 132, 0.5);
     color: #737384;
     outline: none;
     resize: vertical;
     overflow: auto;
+    background: transparent;
   }
 
   &__btn {
