--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -46,7 +46,22 @@ img {
   }
 }
 
+.mr {
+  &-3 {
+    margin-right: 20px;
+  }
+  &-4 {
+    margin-right: 30px;
+  }
+}
+
 .mt {
+  &-3 {
+    margin-top: 20px;
+  }
+  &-4 {
+    margin-top: 30px;
+  }
   &-5 {
     margin-top: 50px;
   }
@@ -155,8 +170,8 @@ h3, .h3 {
   margin-bottom: 15px;
 
   @media (max-width: 575px) {
-    font-size: 19px;
-    line-height: 19px;
+    font-size: 21px;
+    line-height: 21px;
   }
 }
 
@@ -173,7 +188,19 @@ h3, .h3 {
 .heading {
   font-size: 17px;
   font-weight: 600;
-  list-style: 17px;
+  line-height: 17px;
+}
+
+.order {
+
+  &-xs {
+
+    @media (max-width: 575px) {
+      &-first {
+        order: -1;
+      }
+    }
+  }
 }
 
 .flex-row {
