--- a/dev/sass/block/popup.scss
+++ b/dev/sass/block/popup.scss
@@ -2,6 +2,7 @@
 
   .fancybox-content {
     background-color: #F0EFF4;
+    background-image: url(../img/bg.png);
     border-radius: 10px;
     overflow: visible;
 
