--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -23,3 +23,7 @@
 @import 'block/popup-form';
 @import 'block/form';
 @import 'block/popup';
+@import 'block/subscribe';
+@import 'block/modules';
+@import 'block/module-block';
+@import 'block/carousel';
