--- a/dev/sass/block/service-block.scss
+++ b/dev/sass/block/service-block.scss
@@ -3,12 +3,18 @@
   height: 215px;
   background-image: url(../img/bg.png);
   background-color: #c7cbda;
-  margin-left: 15px;
+  // margin-left: 15px;
   margin-bottom: 15px;
   padding: 20px 25px;
   border-radius: 10px;
   color: rgba(62, 62, 84, 0.7);
   cursor: pointer;
+  border-bottom: none;
+
+  &:hover,
+  &:focus {
+    border-bottom: none;
+  }
 
   &__img {
     height: 56px;
