--- a/dev/sass/block/slidet-vertical.scss
+++ b/dev/sass/block/slidet-vertical.scss
@@ -1,6 +1,7 @@
 .slidet-vertical {
   position: relative;
   height: 245px;
+  padding: 20px;
 
   &__item {
     position: absolute;
@@ -9,20 +10,47 @@
     padding-right: 40px;
     box-shadow: 0px 0px 20px rgba(98, 109, 136, 0.4);
     height: calc(100% - 30px);
+    visibility: hidden;
+
+    .text-block--small {
+      overflow: auto;
+      height: 100%;
+      opacity: 0;
+    }
 
     &--active {
       z-index: 3;
+      visibility: visible;
+      transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, z-index 0s linear;
 
       & + .slidet-vertical__item {
         background: rgba(240, 239, 244, 0.4);
-        top: 15px;
+        transform: translateY(15px);
         z-index: 2;
+        visibility: visible;
 
         & + .slidet-vertical__item {
           background: rgba(240, 239, 244, 0.2);
-          top: 30px;
+          transform: translateY(30px);
           z-index: 1;
+          visibility: visible;
         }
+      }
+
+      .text-block--small {
+        opacity: 1;
+      }
+    }
+
+    &--hidden {
+      transform: translateY(-50px);
+      opacity: 0;
+      transition: transform 0.25s ease-in-out, opacity 0.5s ease-in-out;
+      visibility: visible;
+      z-index: 4;
+
+      .text-block--small {
+        opacity: 1;
       }
     }
   }
@@ -58,7 +86,7 @@
     }
   }
 
-  @media (max-width: 449px) {
-    height: 300px;
+  @media (max-width: 1359px) {
+    height: 280px;
   }
 }
