--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -8,6 +8,8 @@
 @import 'block/main-menu';
 @import 'block/header';
 @import 'block/footer';
+@import 'block/workarea';
+@import 'block/ico';
 @import 'block/banner';
 @import 'block/services-main';
 @import 'block/service-block';
@@ -18,7 +20,6 @@
 @import 'block/soc';
 @import 'block/btn';
 @import 'block/img-block';
-@import 'block/workarea';
 @import 'block/second-menu';
 @import 'block/popup-form';
 @import 'block/form';
@@ -27,3 +28,10 @@
 @import 'block/modules';
 @import 'block/module-block';
 @import 'block/carousel';
+@import 'block/service';
+@import 'block/vertical-menu';
+@import 'block/tabs';
+@import 'block/breadcrumbs';
+@import 'block/table-wrap';
+@import 'block/contact-block';
+@import 'block/map';
