--- a/dev/sass/block/article.scss
+++ b/dev/sass/block/article.scss
@@ -289,4 +289,82 @@
       }
     }
   }
+
+  &-detail {
+    background-color: #F0EFF4;
+    background-image: url(../img/bg.png);
+    border-radius: 10px;
+    box-shadow: 0px 4px 7px rgba(98, 109, 136, 0.25);
+    padding: 20px 30px 50px;
+    margin-top: -50px;
+    margin-bottom: 50px;
+
+    &__header {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding-bottom: 10px;
+      border-bottom: 1px solid;
+      opacity: 0.7;
+      margin-bottom: 30px;
+
+      .article__info {
+        min-width: 40%;
+
+        .article__author {
+          max-width: 200px;
+        }
+      }
+
+      @media (max-width: 1109px) {
+        .article__info {
+          width: 100%;
+        }
+        
+        .breadcrumbs {
+          order: -1;
+          margin-bottom: 10px;
+          width: 100%;
+        }
+      }
+
+      @media (max-width: 575px) {
+
+        .article__info {
+        
+          .article__author {
+            max-width: 100%;
+          }
+        }
+      }
+    }
+
+    &__content {
+      padding: 0 50px;
+      margin: 0;
+
+      @media (max-width: 1359px) {
+        padding: 0;
+      }
+    }
+
+    &__img {
+      float: right;
+      max-width: 170px;
+      max-height: 190px;
+
+      @media (max-width: 767px) {
+        float: none;
+        margin-bottom: 20px;
+      }
+    }
+
+    &__structure {
+      width: calc(100% - 200px);
+
+      @media (max-width: 767px) {
+        width: 100%;
+      }
+    }
+  }
 }
