--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -161,9 +161,19 @@ h1, .h1 {
   line-height: 47px;
   margin-bottom: 15px;
 
-  @media (max-width: 575px) {
+  @media (max-width: 1109px) {
+    font-size: 42px;
+    line-height: 42px;
+  }
+
+  @media (max-width: 767px) {
     font-size: 34px;
     line-height: 34px;
+  }
+
+  @media (max-width: 575px) {
+    font-size: 23px;
+    line-height: 23px;
   }
 }
 
