--- a/dev/sass/block/banner.scss
+++ b/dev/sass/block/banner.scss
@@ -25,6 +25,14 @@
   &__content {
     height: 100%;
     align-items: center;
+    transform: translateX(-100px);
+    opacity: 0;
+    transition: transform 0.45s ease-in-out 0.3s, opacity 0.6s ease-in-out 0.3s;
+
+    &--show {
+      opacity: 1;
+      transform: translateX(0);
+    }
   }
 
   @media (max-width: 575px) {
