--- a/dev/sass/block/main-menu.scss
+++ b/dev/sass/block/main-menu.scss
@@ -1,5 +1,7 @@
 .main-menu {
   width: 100%;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out 0.4s;
 
   &__wrapper {
     position: relative;
@@ -170,6 +172,10 @@
         top: 0;
       }
     }
+  }
+
+  &--show {
+    opacity: 1;
   }
 
   &__logo {
