--- a/dev/sass/block/module-block.scss
+++ b/dev/sass/block/module-block.scss
@@ -1,10 +1,10 @@
 .module-block {
   display: flex;
   align-items: center;
-  width: 285px;
+  width: 100%;
   height: 60px;
   padding: 15px;
-  margin: 0 0 10px 10px;
+  margin: 0 0 10px;
   color: #3E3E54;
   background: #E5E4EB;
   border-radius: 5px;
@@ -25,12 +25,10 @@
   }
 
   @media (max-width: 767px) {
-    width: 260px;
     height: 70px;
   }
 
   @media (max-width: 575px) {
-    width: 100%;
     height: 60px;
   }
 }
