--- a/dev/sass/block/modules.scss
+++ b/dev/sass/block/modules.scss
@@ -12,7 +12,7 @@
     width: 430px;
 
     @media (max-width: 1359px) {
-      width: 350px;
+      width: 300px;
     }
 
     @media (max-width: 1109px) {
@@ -22,8 +22,8 @@
 
   &__list {
     width: 590px;
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
     align-items: center;
 
     @media (max-width: 1109px) {
