--- a/dev/sass/block/service-block.scss
+++ b/dev/sass/block/service-block.scss
@@ -1,19 +1,27 @@
 .service-block {
+  display: block;
   width: 250px;
   height: 215px;
   background-image: url(../img/bg.png);
   background-color: #c7cbda;
   // margin-left: 15px;
-  margin-bottom: 15px;
+  margin: 0 auto 15px;
   padding: 20px 25px;
   border-radius: 10px;
   color: rgba(62, 62, 84, 0.7);
   cursor: pointer;
   border-bottom: none;
+  transition: box-shadow 0.25s ease-in-out;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &--active {
     border-bottom: none;
+    box-shadow: inset 0 0 0 3px #7b839a, 0 0 5px rgba(0,0,0,0.5);
+
+    @media (max-width: 1109px) {
+      box-shadow: none;
+    }
   }
 
   &__img {
@@ -47,6 +55,6 @@
   }
 
   @media (max-width: 1109px) {
-    margin-right: 15px;
+    // margin-right: 15px;
   }
 }
