--- a/dev/sass/block/services-main.scss
+++ b/dev/sass/block/services-main.scss
@@ -16,11 +16,11 @@
 
   &__list {
     width: 780px;
-    height: 460px !important;
+    // height: 460px !important;
 
     @media (max-width: 1359px) {
       width: 630px;
-      height: 400px !important;
+      // height: 400px !important;
     }
 
     @media (max-width: 1109px) {
